# keyvaluestore

./: .gitignore  README.ipynb  README.md  example.ipynb  pyproject.toml
src/keyvaluestore/: __init__.py  keyvalueproperty.py
