[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "keyvaluestore"
version = "0.0.1"
authors = [
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "Abstraction class for accessing values in a store by key."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
